# mcp-local-music-storage

./: .env.example  .gitignore  Cargo.toml
.github/workflows/: ci.yml
documentation/architecture/: config-workflow.md
documentation/roadmap/: autonomy-features.md  code-quality-and-fixes.md  musicbrainz-track-b.md
src/: lib.rs  main.rs
src/core/: config.rs  error.rs  fs_atomic.rs  mb_cache.rs  mb_request.rs  mb_throttle.rs  mod.rs  server.rs
src/core/security/: filename.rs  mod.rs  path_validator.rs
src/core/transport/: config.rs  http.rs  service.rs
src/domains/: mod.rs
src/domains/tools/: http_response.rs  mod.rs  registry.rs  result.rs  router.rs
src/domains/tools/definitions/: mod.rs
src/domains/tools/definitions/fs/: delete.rs  find_duplicates.rs  hash.rs  list_dir.rs  mkdir.rs  mod.rs  mv.rs  rename.rs  scan_audio.rs
src/domains/tools/definitions/harmonisation/: inventory.rs  manifest.rs  mod.rs
src/domains/tools/definitions/mb/: artist.rs  blocking_tool.rs  common.rs  cover_download.rs  identify_record.rs  label.rs  match_from_tags.rs  mod.rs  recording.rs  relations.rs  release.rs  work.rs
src/domains/tools/definitions/metadata/: embed_cover.rs  mod.rs  read.rs  read_batch.rs  write.rs  write_batch.rs
src/domains/tools/definitions/naming/: apply_scheme.rs  mod.rs
src/domains/tools/definitions/plan/: apply_plan.rs  mod.rs
tests/: apply_plan.rs  embed_cover_roundtrip.rs  fs_mkdir_move.rs  fs_scan_audio.rs  inventory_divergences.rs  manifests.rs  mcp_e2e.rs  metadata_batch.rs  metadata_roundtrip.rs
